Fix whitespace below footer #4

--- a/style.css
+++ b/style.css
@@ -215,10 +215,6 @@ a {
 }
 
 @media (min-width: 1000px) {
-  .body, html {
-    max-height: 100% !important;
-  }
-
   .main-header {
     border-bottom: 1px solid #b9b7b7;
   }
